@@ -61,6 +61,7 @@ import org.apache.cayenne.dba.h2.H2Sniffer;
 import org.apache.cayenne.dba.hsqldb.HSQLDBSniffer;
 import org.apache.cayenne.dba.ingres.IngresSniffer;
 import org.apache.cayenne.dba.mysql.MySQLSniffer;
+import org.apache.cayenne.dba.mariadb.MariaDBSniffer;
 import org.apache.cayenne.dba.openbase.OpenBaseSniffer;
 import org.apache.cayenne.dba.oracle.OracleAdapter;
 import org.apache.cayenne.dba.oracle.OracleSniffer;
@@ -164,7 +165,8 @@ public class DataDomainProviderTest {
 						.add(OpenBaseSniffer.class).add(FrontBaseSniffer.class).add(IngresSniffer.class)
 						.add(SQLiteSniffer.class).add(DB2Sniffer.class).add(H2Sniffer.class).add(HSQLDBSniffer.class)
 						.add(SybaseSniffer.class).add(DerbySniffer.class).add(SQLServerSniffer.class)
-						.add(OracleSniffer.class).add(PostgresSniffer.class).add(MySQLSniffer.class);
+						.add(OracleSniffer.class).add(PostgresSniffer.class).add(MySQLSniffer.class)
+                        .add(MariaDBSniffer.class);
 				ServerModule.contributeDomainFilters(binder);
 				ServerModule.contributeDomainListeners(binder).add(mockListener);
 				ServerModule.contributeProjectLocations(binder).add(testConfigName);
